--- a/src/docs/asciidoc/base.adoc
+++ b/src/docs/asciidoc/base.adoc
@@ -46,7 +46,7 @@ Une _variable_ permet d'associer un nom (identifiant) à une valeur.
 
 En Java, la valeur peut être directement la valeur d'un type primitif ou une _référence_.
 
-.Exemples de déclarations et initialisations de variables
+.Exemples de déclarations et initialisations de variables pour des types primitifs
 [source,java,indent=0]
 ----
 include::{tstdir}/base/BaseTest.java[tag=base-var-decl]
